# Minor_Project

./: CMakeLists.txt  README.md  kaggle_run.ipynb  yolo-u-net-cpp.ipynb
include/: config.hpp  dataset.hpp  detector.hpp  unet.hpp  utils.hpp
output/: data_yolo.yaml  pipeline_summary.json  report.txt  unet_history.csv  yolo_test_metrics.json
output/yolo_train/: args.yaml  results.csv
scripts/: download_mnist.py  train_yolo_then_unet.py
src/: data_gen.cpp  evaluate.cpp  main.cpp  report.cpp  train_detector.cpp  train_unet.cpp  visualize.cpp
